// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`getStaticDateRanges should create dateRanges for vod 1`] = `
[
  {
    "classId": "com.apple.hls.interstitial",
    "clientAttributes": {
      "ASSET-LIST": "stitcher-endpoint/out/asset-list.json?dt=2021-05-02T10%3A12%3A05.250%2B00%3A00&sid=36bab417-0952-4c23-bdf0-9a424e4651ad",
      "CUE": "ONCE,PRE",
      "RESTRICT": "SKIP,JUMP",
      "RESUME-OFFSET": 0,
      "SPRS-TYPES": "ad",
    },
    "id": "1619950325",
    "startDate": DateTime {
      "_zone": SystemZone {},
      "c": {
        "day": 2,
        "hour": 10,
        "millisecond": 250,
        "minute": 12,
        "month": 5,
        "second": 5,
        "year": 2021,
      },
      "invalid": null,
      "isLuxonDateTime": true,
      "loc": Locale {
        "eraCache": {},
        "fastNumbersCached": null,
        "intl": "en-US",
        "locale": "en-US",
        "meridiemCache": null,
        "monthsCache": {
          "format": {},
          "standalone": {},
        },
        "numberingSystem": null,
        "outputCalendar": null,
        "specifiedLocale": null,
        "weekSettings": null,
        "weekdaysCache": {
          "format": {},
          "standalone": {},
        },
      },
      "localWeekData": null,
      "o": -0,
      "ts": 1619950325250,
      "weekData": null,
    },
  },
  {
    "classId": "com.apple.hls.interstitial",
    "clientAttributes": {
      "ASSET-LIST": "stitcher-endpoint/out/asset-list.json?dt=2021-05-02T10%3A12%3A15.250%2B00%3A00&sid=36bab417-0952-4c23-bdf0-9a424e4651ad",
      "CUE": "ONCE",
      "RESTRICT": "SKIP,JUMP",
      "RESUME-OFFSET": 0,
      "SPRS-TYPES": "ad",
    },
    "id": "1619950335",
    "startDate": DateTime {
      "_zone": SystemZone {},
      "c": {
        "day": 2,
        "hour": 10,
        "millisecond": 250,
        "minute": 12,
        "month": 5,
        "second": 15,
        "year": 2021,
      },
      "invalid": null,
      "isLuxonDateTime": true,
      "loc": Locale {
        "eraCache": {},
        "fastNumbersCached": null,
        "intl": "en-US",
        "locale": "en-US",
        "meridiemCache": null,
        "monthsCache": {
          "format": {},
          "standalone": {},
        },
        "numberingSystem": null,
        "outputCalendar": null,
        "specifiedLocale": null,
        "weekSettings": null,
        "weekdaysCache": {
          "format": {},
          "standalone": {},
        },
      },
      "localWeekData": null,
      "o": -0,
      "ts": 1619950335250,
      "weekData": null,
    },
  },
  {
    "classId": "com.apple.hls.interstitial",
    "clientAttributes": {
      "ASSET-LIST": "stitcher-endpoint/out/asset-list.json?dt=2021-05-02T10%3A12%3A35.250%2B00%3A00&sid=36bab417-0952-4c23-bdf0-9a424e4651ad",
      "CUE": "ONCE",
      "RESTRICT": "SKIP,JUMP",
      "RESUME-OFFSET": 0,
      "SPRS-TYPES": "bumper",
    },
    "id": "1619950355",
    "startDate": DateTime {
      "_zone": SystemZone {},
      "c": {
        "day": 2,
        "hour": 10,
        "millisecond": 250,
        "minute": 12,
        "month": 5,
        "second": 35,
        "year": 2021,
      },
      "invalid": null,
      "isLuxonDateTime": true,
      "loc": Locale {
        "eraCache": {},
        "fastNumbersCached": null,
        "intl": "en-US",
        "locale": "en-US",
        "meridiemCache": null,
        "monthsCache": {
          "format": {},
          "standalone": {},
        },
        "numberingSystem": null,
        "outputCalendar": null,
        "specifiedLocale": null,
        "weekSettings": null,
        "weekdaysCache": {
          "format": {},
          "standalone": {},
        },
      },
      "localWeekData": null,
      "o": -0,
      "ts": 1619950355250,
      "weekData": null,
    },
  },
  {
    "classId": "com.apple.hls.interstitial",
    "clientAttributes": {
      "ASSET-LIST": "stitcher-endpoint/out/asset-list.json?dt=2021-05-02T10%3A12%3A45.250%2B00%3A00&sid=36bab417-0952-4c23-bdf0-9a424e4651ad",
      "CUE": "ONCE",
      "RESTRICT": "SKIP,JUMP",
      "RESUME-OFFSET": 0,
      "SPRS-TYPES": "ad",
    },
    "id": "1619950365",
    "startDate": DateTime {
      "_zone": SystemZone {},
      "c": {
        "day": 2,
        "hour": 10,
        "millisecond": 250,
        "minute": 12,
        "month": 5,
        "second": 45,
        "year": 2021,
      },
      "invalid": null,
      "isLuxonDateTime": true,
      "loc": Locale {
        "eraCache": {},
        "fastNumbersCached": null,
        "intl": "en-US",
        "locale": "en-US",
        "meridiemCache": null,
        "monthsCache": {
          "format": {},
          "standalone": {},
        },
        "numberingSystem": null,
        "outputCalendar": null,
        "specifiedLocale": null,
        "weekSettings": null,
        "weekdaysCache": {
          "format": {},
          "standalone": {},
        },
      },
      "localWeekData": null,
      "o": -0,
      "ts": 1619950365250,
      "weekData": null,
    },
  },
  {
    "classId": "com.apple.hls.interstitial",
    "clientAttributes": {
      "ASSET-LIST": "stitcher-endpoint/out/asset-list.json?dt=2021-05-02T10%3A13%3A45.250%2B00%3A00&sid=36bab417-0952-4c23-bdf0-9a424e4651ad",
      "CUE": "ONCE",
      "RESTRICT": "SKIP,JUMP",
      "RESUME-OFFSET": 0,
    },
    "id": "1619950425",
    "startDate": DateTime {
      "_zone": SystemZone {},
      "c": {
        "day": 2,
        "hour": 10,
        "millisecond": 250,
        "minute": 13,
        "month": 5,
        "second": 45,
        "year": 2021,
      },
      "invalid": null,
      "isLuxonDateTime": true,
      "loc": Locale {
        "eraCache": {},
        "fastNumbersCached": null,
        "intl": "en-US",
        "locale": "en-US",
        "meridiemCache": null,
        "monthsCache": {
          "format": {},
          "standalone": {},
        },
        "numberingSystem": null,
        "outputCalendar": null,
        "specifiedLocale": null,
        "weekSettings": null,
        "weekdaysCache": {
          "format": {},
          "standalone": {},
        },
      },
      "localWeekData": null,
      "o": -0,
      "ts": 1619950425250,
      "weekData": null,
    },
  },
]
`;

exports[`getStaticDateRanges should create dateRanges for live 1`] = `
[
  {
    "classId": "com.apple.hls.interstitial",
    "clientAttributes": {
      "ASSET-LIST": "stitcher-endpoint/out/asset-list.json?dt=2021-05-02T10%3A12%3A05.250%2B00%3A00&sid=36bab417-0952-4c23-bdf0-9a424e4651ad",
      "CUE": "ONCE,PRE",
      "RESTRICT": "SKIP,JUMP",
      "SPRS-TYPES": "ad",
    },
    "id": "1619950325",
    "startDate": DateTime {
      "_zone": SystemZone {},
      "c": {
        "day": 2,
        "hour": 10,
        "millisecond": 250,
        "minute": 12,
        "month": 5,
        "second": 5,
        "year": 2021,
      },
      "invalid": null,
      "isLuxonDateTime": true,
      "loc": Locale {
        "eraCache": {},
        "fastNumbersCached": null,
        "intl": "en-US",
        "locale": "en-US",
        "meridiemCache": null,
        "monthsCache": {
          "format": {},
          "standalone": {},
        },
        "numberingSystem": null,
        "outputCalendar": null,
        "specifiedLocale": null,
        "weekSettings": null,
        "weekdaysCache": {
          "format": {},
          "standalone": {},
        },
      },
      "localWeekData": null,
      "o": -0,
      "ts": 1619950325250,
      "weekData": null,
    },
  },
  {
    "classId": "com.apple.hls.interstitial",
    "clientAttributes": {
      "ASSET-LIST": "stitcher-endpoint/out/asset-list.json?dt=2021-05-02T10%3A12%3A15.250%2B00%3A00&sid=36bab417-0952-4c23-bdf0-9a424e4651ad",
      "CUE": "ONCE",
      "RESTRICT": "SKIP,JUMP",
      "SPRS-TYPES": "ad",
    },
    "id": "1619950335",
    "startDate": DateTime {
      "_zone": SystemZone {},
      "c": {
        "day": 2,
        "hour": 10,
        "millisecond": 250,
        "minute": 12,
        "month": 5,
        "second": 15,
        "year": 2021,
      },
      "invalid": null,
      "isLuxonDateTime": true,
      "loc": Locale {
        "eraCache": {},
        "fastNumbersCached": null,
        "intl": "en-US",
        "locale": "en-US",
        "meridiemCache": null,
        "monthsCache": {
          "format": {},
          "standalone": {},
        },
        "numberingSystem": null,
        "outputCalendar": null,
        "specifiedLocale": null,
        "weekSettings": null,
        "weekdaysCache": {
          "format": {},
          "standalone": {},
        },
      },
      "localWeekData": null,
      "o": -0,
      "ts": 1619950335250,
      "weekData": null,
    },
  },
  {
    "classId": "com.apple.hls.interstitial",
    "clientAttributes": {
      "ASSET-LIST": "stitcher-endpoint/out/asset-list.json?dt=2021-05-02T10%3A12%3A35.250%2B00%3A00&sid=36bab417-0952-4c23-bdf0-9a424e4651ad",
      "CUE": "ONCE",
      "RESTRICT": "SKIP,JUMP",
      "SPRS-TYPES": "bumper",
    },
    "id": "1619950355",
    "startDate": DateTime {
      "_zone": SystemZone {},
      "c": {
        "day": 2,
        "hour": 10,
        "millisecond": 250,
        "minute": 12,
        "month": 5,
        "second": 35,
        "year": 2021,
      },
      "invalid": null,
      "isLuxonDateTime": true,
      "loc": Locale {
        "eraCache": {},
        "fastNumbersCached": null,
        "intl": "en-US",
        "locale": "en-US",
        "meridiemCache": null,
        "monthsCache": {
          "format": {},
          "standalone": {},
        },
        "numberingSystem": null,
        "outputCalendar": null,
        "specifiedLocale": null,
        "weekSettings": null,
        "weekdaysCache": {
          "format": {},
          "standalone": {},
        },
      },
      "localWeekData": null,
      "o": -0,
      "ts": 1619950355250,
      "weekData": null,
    },
  },
  {
    "classId": "com.apple.hls.interstitial",
    "clientAttributes": {
      "ASSET-LIST": "stitcher-endpoint/out/asset-list.json?dt=2021-05-02T10%3A12%3A45.250%2B00%3A00&sid=36bab417-0952-4c23-bdf0-9a424e4651ad",
      "CUE": "ONCE",
      "RESTRICT": "SKIP,JUMP",
      "SPRS-TYPES": "ad",
    },
    "id": "1619950365",
    "startDate": DateTime {
      "_zone": SystemZone {},
      "c": {
        "day": 2,
        "hour": 10,
        "millisecond": 250,
        "minute": 12,
        "month": 5,
        "second": 45,
        "year": 2021,
      },
      "invalid": null,
      "isLuxonDateTime": true,
      "loc": Locale {
        "eraCache": {},
        "fastNumbersCached": null,
        "intl": "en-US",
        "locale": "en-US",
        "meridiemCache": null,
        "monthsCache": {
          "format": {},
          "standalone": {},
        },
        "numberingSystem": null,
        "outputCalendar": null,
        "specifiedLocale": null,
        "weekSettings": null,
        "weekdaysCache": {
          "format": {},
          "standalone": {},
        },
      },
      "localWeekData": null,
      "o": -0,
      "ts": 1619950365250,
      "weekData": null,
    },
  },
  {
    "classId": "com.apple.hls.interstitial",
    "clientAttributes": {
      "ASSET-LIST": "stitcher-endpoint/out/asset-list.json?dt=2021-05-02T10%3A13%3A45.250%2B00%3A00&sid=36bab417-0952-4c23-bdf0-9a424e4651ad",
      "CUE": "ONCE",
      "RESTRICT": "SKIP,JUMP",
    },
    "id": "1619950425",
    "startDate": DateTime {
      "_zone": SystemZone {},
      "c": {
        "day": 2,
        "hour": 10,
        "millisecond": 250,
        "minute": 13,
        "month": 5,
        "second": 45,
        "year": 2021,
      },
      "invalid": null,
      "isLuxonDateTime": true,
      "loc": Locale {
        "eraCache": {},
        "fastNumbersCached": null,
        "intl": "en-US",
        "locale": "en-US",
        "meridiemCache": null,
        "monthsCache": {
          "format": {},
          "standalone": {},
        },
        "numberingSystem": null,
        "outputCalendar": null,
        "specifiedLocale": null,
        "weekSettings": null,
        "weekdaysCache": {
          "format": {},
          "standalone": {},
        },
      },
      "localWeekData": null,
      "o": -0,
      "ts": 1619950425250,
      "weekData": null,
    },
  },
]
`;
